--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:textFontWeight="900"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:text="GearUP"
+            android:text="GearUp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -132,15 +132,17 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/loginbtn"
-            android:layout_width="130dp"
-            android:layout_height="45dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/loginbtn_custom"
-            android:backgroundTint="@null"
+            android:layout_marginTop="40dp"
+            android:backgroundTint="#FF018786"
+            android:background="@drawable/password_btn"
             android:text="LOGIN"
             android:textAllCaps="true"
-            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@id/newAccount"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
