--- a/app/src/main/res/layout/activity_seller_shop.xml
+++ b/app/src/main/res/layout/activity_seller_shop.xml
@@ -24,7 +24,7 @@
         android:id="@+id/profile_and_message_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         app:layout_constraintTop_toBottomOf="@id/btn_back"
@@ -95,7 +95,7 @@
                 android:id="@+id/tv_shop_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" Shop Name"
+                android:text="Shop Name"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@id/tv_shop_label"
@@ -141,21 +141,21 @@
                 android:id="@+id/tv_phone_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" Phone Number"
-                android:textSize="18sp"
+                android:text="Phone Number"
+                android:textSize="15sp"
+                android:layout_marginTop="3dp"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@id/tv_phone_number_label"
                 app:layout_constraintTop_toBottomOf="@id/tv_address"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- Upper Search Bar and Category Spinner -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/profile_and_message_container">
 
-        <!-- Horizontal LinearLayout for EditText and Spinner -->
         <LinearLayout
             android:id="@+id/upper"
             android:layout_width="match_parent"
@@ -164,8 +164,7 @@
             android:padding="10dp"
             android:gravity="center_vertical"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/profile_and_message_container"
-            tools:ignore="NotSibling">
+            app:layout_constraintTop_toTopOf="parent">
 
             <!-- EditText (Search Bar) -->
             <EditText
@@ -182,26 +181,28 @@
                 android:textSize="14sp"
                 android:layout_weight="1"/>
 
+            <!-- Spinner for Categories -->
             <Spinner
                 android:id="@+id/spinner_categories"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/search_bar_background"
                 android:padding="8dp"/>
+
         </LinearLayout>
 
         <!-- RecyclerView for displaying products -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_products"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="70dp"
+            android:clipToPadding="false"
+            android:paddingBottom="16dp"
+            android:nestedScrollingEnabled="false"
             app:layout_constraintTop_toBottomOf="@id/upper"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintHorizontal_bias="0.0" />
+            app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
