--- a/app/src/main/res/layout/item_product_seller.xml
+++ b/app/src/main/res/layout/item_product_seller.xml
@@ -40,6 +40,8 @@
         android:id="@+id/tv_product_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/black"
         android:layout_marginTop="8dp"
@@ -83,6 +85,7 @@
         android:textColor="@android:color/darker_gray"
         android:layout_marginTop="4dp"
         android:text="Product Description"
+        android:singleLine="true"
         android:maxLines="2"
         android:ellipsize="end" />
 
