--- a/app/src/main/res/layout/fragment_trends_seller.xml
+++ b/app/src/main/res/layout/fragment_trends_seller.xml
@@ -49,7 +49,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginEnd="5dp"
-            android:src="@drawable/flame"
+            android:src="@drawable/predict"
             android:background="?android:attr/selectableItemBackground"
             android:scaleType="fitXY"
             app:layout_constraintTop_toTopOf="@id/et_search"
