--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -38,4 +38,13 @@
         android:scrollbars="vertical"
         android:background="@drawable/add_tocart_border"/>
 
+    <TextView
+        android:id="@+id/textView_total"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Total: ₱0.00"
+        android:textSize="18sp"
+        android:layout_margin="16dp"
+        android:layout_gravity="center_horizontal"/>
+
 </LinearLayout>
