--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -4,6 +4,12 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp">
+    <CheckBox
+        android:id="@+id/checkbox_cart_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="10dp" />
 
     <ImageView
         android:id="@+id/iv_product_image"
@@ -36,4 +42,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
+
     </LinearLayout>
