--- a/app/src/main/res/layout/activity_product_details_buyer.xml
+++ b/app/src/main/res/layout/activity_product_details_buyer.xml
@@ -218,6 +218,18 @@
                 app:layout_constraintStart_toEndOf="@id/tv_label_product_description"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
+            <TextView
+                android:id="@+id/tv_average_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="0.0"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"
+                app:layout_constraintTop_toBottomOf="@id/tv_label_product_description"
+                app:layout_constraintStart_toStartOf="parent"/>
+
             <ImageButton
                 android:id="@+id/ratingBtn"
                 android:layout_width="wrap_content"
@@ -225,8 +237,10 @@
                 android:layout_marginTop="5dp"
                 android:background="@drawable/star"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_product_description"
-                app:layout_constraintStart_toStartOf="parent"
-                />
+                app:layout_constraintStart_toEndOf="@id/tv_average_rating"
+                android:layout_marginStart="8dp"/>
+
+
 
 
             <TextView
