--- a/app/src/main/res/layout/dialog_add_review.xml
+++ b/app/src/main/res/layout/dialog_add_review.xml
@@ -18,9 +18,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/buttonSubmitReview"
+        app:layout_constraintBottom_toTopOf="@id/ratingBar"
         android:scrollbars="vertical"
         android:imeOptions="actionDone" />
+
+    <!-- Rating Bar for Star Rating -->
+    <android.widget.RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="5"
+        android:stepSize="1.0"
+        android:rating="0"
+        android:isIndicator="false"
+        app:layout_constraintTop_toBottomOf="@id/editTextReview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- Submit Button -->
     <androidx.appcompat.widget.AppCompatButton
@@ -30,7 +43,7 @@
         android:text="Submit Review"
         android:textColor="@android:color/black"
         android:background="@drawable/border"
-        app:layout_constraintTop_toBottomOf="@id/editTextReview"
+        app:layout_constraintTop_toBottomOf="@id/ratingBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
