--- a/app/src/main/res/layout/activity_product_details_buyer.xml
+++ b/app/src/main/res/layout/activity_product_details_buyer.xml
@@ -289,6 +289,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:padding="8dp"
+                android:background="@color/transparent"
                 android:scrollbars="vertical"
                 app:layout_constraintTop_toBottomOf="@id/btn_add_review"
                 app:layout_constraintStart_toStartOf="parent"
