--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -1,63 +1,110 @@
-<!-- res/layout/item_review.xml -->
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="10dp"
-    >
+    app:cardCornerRadius="10dp"
+    android:background="@color/transparent"
+    app:cardElevation="4dp">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/transparent"
+        android:orientation="horizontal"
         android:padding="12dp">
 
+        <!-- Profile Image -->
         <androidx.cardview.widget.CardView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:layout_gravity="start"
-            android:layout_marginEnd="16dp"
-            app:cardCornerRadius="100dp">
+            app:cardCornerRadius="20dp"
+            android:layout_marginEnd="12dp"
+            app:cardElevation="2dp">
 
-            <!-- Profile Image -->
             <ImageView
                 android:id="@+id/iv_profile_image"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_launcher_background"
-                android:contentDescription="Profile Image"
-                android:layout_marginEnd="12dp"
-                android:layout_marginRight="12dp"/>
+                android:contentDescription="Profile Image"/>
         </androidx.cardview.widget.CardView>
 
-        <!-- User Info Container -->
+        <!-- Right Section (User Info + Rating + Review Text) -->
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <!-- User Name -->
-            <TextView
-                android:id="@+id/tv_user_name"
+            <!-- User Name + Timestamp -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/tv_user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Martin Luather"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:textColor="@android:color/black"
+                    android:layout_marginEnd="6dp"/>
+
+                <TextView
+                    android:id="@+id/tv_review_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2 days ago"
+                    android:textSize="12sp"
+                    android:textColor="@android:color/darker_gray"/>
+            </LinearLayout>
+
+            <!-- Star Rating + Rating Value -->
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="User Name"
-                android:textSize="14sp"
-                android:textColor="@android:color/black"
-                android:layout_marginBottom="4dp"/>
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginTop="2dp">
+
+                <RatingBar
+                    android:id="@+id/ratingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:stepSize="0.5"
+                    android:isIndicator="true"
+                    android:scaleX="1"
+                    android:scaleY="0.9"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_rating_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="(4.0)"
+                    android:textSize="12sp"
+                    android:textColor="@android:color/darker_gray"
+                    android:layout_marginStart="4dp"/>
+            </LinearLayout>
 
             <!-- Review Text -->
             <TextView
                 android:id="@+id/tv_review_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Review text goes here."
-                android:textSize="12sp"
-                android:textColor="@android:color/darker_gray"/>
+                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s."
+                android:textSize="14sp"
+                android:maxLines="2"
+                android:textColor="@android:color/black"
+                android:layout_marginTop="4dp"/>
         </LinearLayout>
-
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
